--- a/mainLauncher/CMakeLists.txt
+++ b/mainLauncher/CMakeLists.txt
@@ -1,9 +1,13 @@
 
 add_executable(mainLauncher mainLauncher.cpp)
 
-target_link_libraries(mainLauncher PUBLIC src pugixml sfml-graphics)
+target_link_libraries(mainLauncher PUBLIC src pugixml sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
 
-add_custom_command(TARGET mainLauncher POST_BUILD
-		   COMMAND ${CMAKE_COMMAND} -E copy
-			   ${CMAKE_SOURCE_DIR}/resources/visage.xml
-			   ${CMAKE_CURRENT_BINARY_DIR})
+add_custom_target(copy-resources ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/resources)
+file(GLOB RESOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/resources/*.*)
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/resources
+                   DEPENDS ${CMAKE_SOURCE_DIR}/resources
+                   COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/resources
+                   COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                           ${RESOURCES}
+                           ${CMAKE_CURRENT_BINARY_DIR}/resources)
