--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ FetchContent_MakeAvailable(pugixml)
 FetchContent_Declare(
     box2d
     GIT_REPOSITORY https://github.com/erincatto/box2d.git
-    GIT_TAG v2.3.1
+    GIT_TAG origin/master
+
 )
 
 FetchContent_MakeAvailable(box2d)
@@ -34,5 +35,6 @@ FetchContent_MakeAvailable(box2d)
 add_subdirectory(mainLauncher)
 add_subdirectory(src)
 add_subdirectory(unitTests)
+
 
 
