Ajout des shapes du projet OutilVisualisation pour avoir un rendering avec SFML de box2D.  Création d'un objet visage.xml test à lire par pugixml.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,5 @@
 file(GLOB SOURCES CONFIGURE_DEPENDS *.h *.cpp)
 
 add_library(src ${SOURCES} )
-target_link_libraries(src PUBLIC box2d pugixml sfml-graphics)
+target_link_libraries(src PUBLIC box2d pugixml sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
 target_include_directories(src PUBLIC ./)
